# term22

./: @  Cargo.toml  LICENSE  README.md
src/: main.rs  term22.rs
